--- a/style/style.css
+++ b/style/style.css
@@ -203,6 +203,134 @@ color: #FEA301;
 
 
 
+/*our-story*/
+
+.cover{
+  background-color: #FFF4DC;
+  width: 100%;
+  height: 700px;
+
+}
+ 
+
+ 
+
+
+.right-side{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  justify-content: center;
+}
+.paragraph{
+      
+  font-weight: bold;
+  
+}
+
+.left-side,.right-side{
+  display:grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 15px;
+}
+.story-title{
+  text-align: center;
+}
+ .stories {
+   max-width: 900px;
+   margin: auto; }
+
+ 
+ h2 { 
+  font-size: 2rem;
+   margin-bottom: 20px;
+   margin-top: 10px;
+   }
+ 
+ .stories-container{
+   display: grid; 
+   grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+    
+    gap: 20px; }
+
+
+    .story {
+       background: white;
+       padding: 15px;
+       border-radius: 10px;
+       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+      text-align: left; }
+    
+    .story img {
+       width: 100%;
+       border-radius: 10px; }
+
+
+     .date {
+       font-size: 12px;
+       font-weight: bold; 
+      padding: 5px 10px; 
+      display: inline-block; 
+      border-radius: 20px;
+       margin: 10px 0; }
+
+
+      .blue {
+         background-color: #00aaff;
+         color: white;;
+       }
+
+
+       .yellow {
+         background-color: #ffaa00;
+         color: white;
+         }
+
+        .green {
+           background-color: #4CAF50;
+           color: white; }
+
+         h3 { 
+          font-size: 1rem; 
+          margin-bottom: 10px;
+          text-align: center;
+         }
+
+          p { 
+            font-size: 0.9rem; 
+            color: #555;
+           }
+
+           .view-all {
+             
+             padding: 10px 20px;
+             background-color: black;
+             color: white; border: none; 
+            cursor: pointer;
+             border-radius: 5px; 
+            font-size: 1rem;
+            text-align: center;
+            
+            width: 150px;
+            margin: 0 auto;
+            
+            
+           } 
+
+           .story1,.story2{
+
+            display: flex;
+           }
+
+          .blue,.yellow,.green{
+            position: relative;
+            top: -30px;
+            border: none;
+          }
+
+
+
+
   /*responsive */
   @media screen and (max-width: 576px){
     .nav-lists, .nav-btn{
