--- a/style/style.css
+++ b/style/style.css
@@ -327,8 +327,33 @@ color: #FEA301;
             top: -30px;
             border: none;
           }
+ 
 
+          /* footer*/
 
+          .footer-section{
+
+            background-color: #01ACFD;
+            width: 100%;
+            height: 300px;
+            display: flex;
+            gap: 50px;
+            justify-content: space-around;
+            justify-items: center;
+            margin: 0 auto;
+            
+          }
+
+    
+
+          .first{
+            display: flex;
+            color: white;
+          }
+           .footer-items{
+            list-style: none;
+            color: white;
+           }
 
 
   /*responsive */
